--- a/index.html
+++ b/index.html
@@ -78,12 +78,10 @@
 <footer>
   <div class="container">
     <div class="logo"><img src="/vaola.png" alt="VAOLA"/></div>
-    <ul class="links">
-      <li><a href="#">Impressum</a></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <div class="copyright">© mysportgroup GmbH - www.vaola.de</div>
+    <div class="copyright">
+      © mysportgroup GmbH - www.vaola.de<br/>
+      <a href="/impressum.html">Impressum</a>
+    </div>
   </div>
 </footer>
 
